fix: non-working thing and we might want to change library

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
   "author": "christopher",
   "license": "ISC",
   "devDependencies": {
+    "@types/node": "^20.5.7",
     "typescript": "^5.2.2"
+  },
+  "dependencies": {
+    "pdf2pic": "^3.0.1"
   }
 }
