--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^20.5.7",
+    "@types/pngjs": "^6.0.1",
+    "pdf-to-png-converter": "^3.1.0",
     "typescript": "^5.2.2"
   },
   "dependencies": {
-    "pdf2pic": "^3.0.1"
+    "jsqr": "^1.4.0",
+    "pngjs": "^7.0.0"
   }
 }
